--- a/lesson18/pubspec.yaml
+++ b/lesson18/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   scoped_model: ^2.0.0-nullsafety.0
   sqflite: ^2.0.2
   path_provider: ^2.0.9
+  cloud_firestore: ^3.1.10
+  firebase_core: ^1.13.1
 
 dev_dependencies:
   flutter_test:
